# icbiadb

./: .gitignore  CHANGELOG.md  Cargo.toml  IDEAS.md  LICENSE  README.md  TODO.md  file_layout.txt
examples/: declare.rs
src/: byte_size.rs  db.rs  error.rs  icbiadb.rs  lib.rs  macros.rs  mem.rs  prelude.rs  slice.rs  types.rs  utils.rs
src/database/: mod.rs
src/database/doc/: mod.rs
src/database/kv/: mod.rs  parser.rs
src/database/table/: mod.rs  parser.rs  types.rs
src/decl/: macros.rs  mod.rs  types.rs
src/fio/: mod.rs  reader.rs  writer.rs
src/parser/: decl.rs  kv.rs  mod.rs
src/storage/: btreemap.rs  ikv.rs  ikvstorage.rs  mod.rs
src/types/: bv.rs  cursor.rs  mod.rs  record.rs
src/types/bv/: bvint.rs  bvobj.rs  bvobject.rs  bvstr.rs  bvstring.rs  bvtuple.rs  byteslice.rs  bytevec.rs  mod.rs
