[package]
name = "icbiadb"
version = "0.3.1"
authors = ["Emanuel GS <grundligt@hotmail.com>"]
edition = "2018"
description = "I can't believe it's a database | Simple embedded 3-in-1 database"
license = "MIT"
repository = "https://github.com/icbiadb/icbiadb"
keywords = ["database"]
readme = "README.md"
categories = ["database", "database-implementations"]

[profile.dev]
opt-level = 1

[dependencies]
serde = {version="1.0.114", features=["derive"]}
bincode = "1.2.1"
regex = {version="1.3.7", optional=true}

[dev-dependencies]
log = "0.4.8"
env_logger = "0.7.1"

[features]
regex_search = ["regex"]


